parser.output
Terminals unused in grammar

   phacer
   pcontinuar
   pincluir
   parchivo
   pcreararchivoder
   pcrearconjunto
   pcrearregex
   pcrearentrada
   pguardararchivo
   pcrearcuenta
   pverificarcuenta
   pdepositarcuenta
   prestarcuenta
   pimprimirtransaccionescuenta
   pconsultarcuenta
   ptransferir
   menos


State 108 conflicts: 5 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 5 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: INICIO $end

    1 INICIO: LCLASES

    2 LCLASES: LCLASES CLASE
    3        | CLASE

    4 CLASE: pclase id TERMINACIONCLASE

    5 TERMINACIONCLASE: pextender LIDS abrir_llave RELLENOCLASE cerrar_llave
    6                 | abrir_llave RELLENOCLASE cerrar_llave

    7 RELLENOCLASE: /* empty */
    8             | LSENTENCIAS

    9 LIDS: LIDS coma id
   10     | id

   11 LSENTENCIAS: LSENTENCIAS SENTENCIA
   12            | SENTENCIA

   13 SENTENCIA: DECLARACION
   14          | ASIGNACION
   15          | LLAMADAFUNC finalizacion
   16          | PRINCIPAL
   17          | RETORNAR
   18          | IMPRIMIR
   19          | MOSTRARNOTIFI
   20          | SI
   21          | PARA
   22          | REPETIR
   23          | ROMPER
   24          | MIENTRAS
   25          | COMPROBAR

   26 DECLARACION: VISIBILIDAD TIPO LIDS TERMDECLAR
   27            | SOBREESCRITURA VISIBILIDAD TIPO LIDS TERMDECLAR
   28            | TIPO LIDS TERMDECLAR
   29            | SOBREESCRITURA TIPO LIDS TERMDECLAR
   30            | VISIBILIDAD parreglo TIPO LIDS DIMENSION TERMARRAY
   31            | parreglo TIPO LIDS DIMENSION TERMARRAY

   32 ASIGNACION: id igual EXPL finalizacion
   33           | id DIMENSION igual EXPL finalizacion
   34           | id punto id igual EXPL finalizacion

   35 PRINCIPAL: pprincipal abrir_parentesis cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

   36 FUNCIONES: abrir_parentesis LTIPOS cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave
   37          | abrir_parentesis cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

   38 RETORNAR: pretornar EXPL finalizacion

   39 IMPRIMIR: pimprimir abrir_parentesis EXPL cerrar_parentesis finalizacion

   40 MOSTRARNOTIFI: pmostrarnotificacion abrir_parentesis EXPL coma EXPL cerrar_parentesis finalizacion

   41 SI: psi abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave TERMINSI

   42 PARA: ppara abrir_parentesis PRIMERFOR EXPL finalizacion EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

   43 REPETIR: prepetir abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

   44 ROMPER: promper finalizacion

   45 MIENTRAS: pmientras abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

   46 COMPROBAR: pcomprobar abrir_parentesis id cerrar_parentesis abrir_llave CASOS cerrar_llave

   47 CASOS: CASOS pcaso EXPL dos_puntos RELLENOCLASE psalir finalizacion
   48      | CASOS pdefecto dos_puntos RELLENOCLASE psalir finalizacion
   49      | pcaso EXPL dos_puntos RELLENOCLASE psalir finalizacion
   50      | pdefecto dos_puntos RELLENOCLASE psalir finalizacion

   51 PRIMERFOR: DECLARACION
   52          | ASIGNACION

   53 TERMINSI: /* empty */
   54         | psino abrir_llave RELLENOCLASE cerrar_llave
   55         | psino SI

   56 TIPO: pint
   57     | pdouble
   58     | pbool
   59     | pchar
   60     | pstring
   61     | id
   62     | pvoid

   63 LTIPOS: LTIPOS coma TIPO id
   64       | LTIPOS coma TIPO id DIMENSION
   65       | TIPO id
   66       | TIPO id DIMENSION

   67 TERMDECLAR: finalizacion
   68           | FUNCIONES
   69           | igual EXPL finalizacion
   70           | igual pnew id abrir_parentesis cerrar_parentesis finalizacion

   71 DIMENSION: abrir_corchete EXPL cerrar_corchete
   72          | abrir_corchete EXPL cerrar_corchete abrir_corchete EXPL cerrar_corchete
   73          | abrir_corchete EXPL cerrar_corchete abrir_corchete EXPL cerrar_corchete abrir_corchete EXPL cerrar_corchete

   74 TERMARRAY: finalizacion
   75          | igual LDECLARRAY finalizacion

   76 SOBREESCRITURA: psobrescribir

   77 LDECLARRAY: abrir_llave LEXP cerrar_llave
   78           | abrir_llave LLLAVE cerrar_llave

   79 LLLAVE: LLLAVE coma abrir_llave LEXP cerrar_llave
   80       | abrir_llave LEXP cerrar_llave

   81 LEXP: LEXP coma EXPL
   82     | EXPL

   83 EXPL: EXPR opor EXPR
   84     | EXPR opnor EXPR
   85     | EXPR opand EXPR
   86     | EXPR opnand EXPR
   87     | opnot EXPL
   88     | EXPR

   89 EXPR: EXPA igual_igual EXPA
   90     | EXPA diferente_de EXPA
   91     | EXPA menor_que EXPA
   92     | EXPA mayor_que EXPA
   93     | EXPA menorigual_que EXPA
   94     | EXPA mayorigual_que EXPA
   95     | EXPA

   96 EXPA: EXPA suma EXPA
   97     | EXPA resta EXPA
   98     | EXPA multi EXPA
   99     | EXPA division EXPA
  100     | EXPA potencia EXPA
  101     | resta EXPA
  102     | abrir_parentesis EXPA cerrar_parentesis
  103     | numero
  104     | decimal
  105     | caracter
  106     | booleano
  107     | cadena
  108     | id
  109     | id DIMENSION
  110     | id aumento
  111     | id decremento
  112     | numero aumento
  113     | numero decremento
  114     | decimal aumento
  115     | decimal decremento
  116     | caracter aumento
  117     | caracter decremento
  118     | id punto id
  119     | LLAMADAFUNC

  120 LLAMADAFUNC: id punto id abrir_parentesis VARF cerrar_parentesis
  121            | id abrir_parentesis VARF cerrar_parentesis

  122 VARF: /* empty */
  123     | LEXP

  124 VISIBILIDAD: ppublico
  125            | pprivado
  126            | pprotegido


Terminals, with rules where they appear

$end (0) 0
error (256)
numero (258) 103 112 113
decimal (259) 104 114 115
caracter (260) 105 116 117
booleano (261) 106
cadena (262) 107
pint (263) 56
pdouble (264) 57
pbool (265) 58
pchar (266) 59
pstring (267) 60
parreglo (268) 30 31
pclase (269) 4
pextender (270) 5
psobrescribir (271) 76
ppublico (272) 124
pprivado (273) 125
pprotegido (274) 126
pretornar (275) 38
pvoid (276) 62
pmostrarnotificacion (277) 40
pimprimir (278) 39
psi (279) 41
psino (280) 54 55
ppara (281) 42
pprincipal (282) 35
prepetir (283) 43
promper (284) 44
pmientras (285) 45
pcomprobar (286) 46
phacer (287)
pcontinuar (288)
pincluir (289)
parchivo (290)
pcreararchivoder (291)
pcrearconjunto (292)
pcrearregex (293)
pcrearentrada (294)
pguardararchivo (295)
pcrearcuenta (296)
pverificarcuenta (297)
pdepositarcuenta (298)
prestarcuenta (299)
pimprimirtransaccionescuenta (300)
pconsultarcuenta (301)
ptransferir (302)
pnew (303) 70
id (304) 4 9 10 32 33 34 46 61 63 64 65 66 70 108 109 110 111 118 120
    121
abrir_corchete (305) 71 72 73
cerrar_corchete (306) 71 72 73
coma (307) 9 40 63 64 79 81
punto (308) 34 118 120
finalizacion (309) 15 32 33 34 38 39 40 42 44 47 48 49 50 67 69 70
    74 75
igual (310) 32 33 34 69 70 75
aumento (311) 110 112 114 116
decremento (312) 111 113 115 117
abrir_parentesis (313) 35 36 37 39 40 41 42 43 45 46 70 102 120 121
cerrar_parentesis (314) 35 36 37 39 40 41 42 43 45 46 70 102 120 121
abrir_llave (315) 5 6 35 36 37 41 42 43 45 46 54 77 78 79 80
cerrar_llave (316) 5 6 35 36 37 41 42 43 45 46 54 77 78 79 80
igual_igual (317) 89
diferente_de (318) 90
menor_que (319) 91
menorigual_que (320) 93
mayor_que (321) 92
mayorigual_que (322) 94
opor (323) 83
opand (324) 85
opnand (325) 86
opnot (326) 87
opnor (327) 84
suma (328) 96
resta (329) 97 101
multi (330) 98
division (331) 99
potencia (332) 100
pcaso (333) 47 49
psalir (334) 47 48 49 50
pdefecto (335) 48 50
dos_puntos (336) 47 48 49 50
menos (337)


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
INICIO (84)
    on left: 1, on right: 0
LCLASES (85)
    on left: 2 3, on right: 1 2
CLASE (86)
    on left: 4, on right: 2 3
TERMINACIONCLASE (87)
    on left: 5 6, on right: 4
RELLENOCLASE (88)
    on left: 7 8, on right: 5 6 35 36 37 41 42 43 45 47 48 49 50 54
LIDS (89)
    on left: 9 10, on right: 5 9 26 27 28 29 30 31
LSENTENCIAS (90)
    on left: 11 12, on right: 8 11
SENTENCIA (91)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 11 12
DECLARACION (92)
    on left: 26 27 28 29 30 31, on right: 13 51
ASIGNACION (93)
    on left: 32 33 34, on right: 14 52
PRINCIPAL (94)
    on left: 35, on right: 16
FUNCIONES (95)
    on left: 36 37, on right: 68
RETORNAR (96)
    on left: 38, on right: 17
IMPRIMIR (97)
    on left: 39, on right: 18
MOSTRARNOTIFI (98)
    on left: 40, on right: 19
SI (99)
    on left: 41, on right: 20 55
PARA (100)
    on left: 42, on right: 21
REPETIR (101)
    on left: 43, on right: 22
ROMPER (102)
    on left: 44, on right: 23
MIENTRAS (103)
    on left: 45, on right: 24
COMPROBAR (104)
    on left: 46, on right: 25
CASOS (105)
    on left: 47 48 49 50, on right: 46 47 48
PRIMERFOR (106)
    on left: 51 52, on right: 42
TERMINSI (107)
    on left: 53 54 55, on right: 41
TIPO (108)
    on left: 56 57 58 59 60 61 62, on right: 26 27 28 29 30 31 63 64
    65 66
LTIPOS (109)
    on left: 63 64 65 66, on right: 36 63 64
TERMDECLAR (110)
    on left: 67 68 69 70, on right: 26 27 28 29
DIMENSION (111)
    on left: 71 72 73, on right: 30 31 33 64 66 109
TERMARRAY (112)
    on left: 74 75, on right: 30 31
SOBREESCRITURA (113)
    on left: 76, on right: 27 29
LDECLARRAY (114)
    on left: 77 78, on right: 75
LLLAVE (115)
    on left: 79 80, on right: 78 79
LEXP (116)
    on left: 81 82, on right: 77 79 80 81 123
EXPL (117)
    on left: 83 84 85 86 87 88, on right: 32 33 34 38 39 40 41 42 43
    45 47 49 69 71 72 73 81 82 87
EXPR (118)
    on left: 89 90 91 92 93 94 95, on right: 83 84 85 86 88
EXPA (119)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117 118 119, on right: 89 90 91 92 93 94
    95 96 97 98 99 100 101 102
LLAMADAFUNC (120)
    on left: 120 121, on right: 15 119
VARF (121)
    on left: 122 123, on right: 120 121
VISIBILIDAD (122)
    on left: 124 125 126, on right: 26 27 30


State 0

    0 $accept: . INICIO $end

    pclase  shift, and go to state 1

    INICIO   go to state 2
    LCLASES  go to state 3
    CLASE    go to state 4


State 1

    4 CLASE: pclase . id TERMINACIONCLASE

    id  shift, and go to state 5


State 2

    0 $accept: INICIO . $end

    $end  shift, and go to state 6


State 3

    1 INICIO: LCLASES .
    2 LCLASES: LCLASES . CLASE

    pclase  shift, and go to state 1

    $default  reduce using rule 1 (INICIO)

    CLASE  go to state 7


State 4

    3 LCLASES: CLASE .

    $default  reduce using rule 3 (LCLASES)


State 5

    4 CLASE: pclase id . TERMINACIONCLASE

    pextender    shift, and go to state 8
    abrir_llave  shift, and go to state 9

    TERMINACIONCLASE  go to state 10


State 6

    0 $accept: INICIO $end .

    $default  accept


State 7

    2 LCLASES: LCLASES CLASE .

    $default  reduce using rule 2 (LCLASES)


State 8

    5 TERMINACIONCLASE: pextender . LIDS abrir_llave RELLENOCLASE cerrar_llave

    id  shift, and go to state 11

    LIDS  go to state 12


State 9

    6 TERMINACIONCLASE: abrir_llave . RELLENOCLASE cerrar_llave

    pint                  shift, and go to state 13
    pdouble               shift, and go to state 14
    pbool                 shift, and go to state 15
    pchar                 shift, and go to state 16
    pstring               shift, and go to state 17
    parreglo              shift, and go to state 18
    psobrescribir         shift, and go to state 19
    ppublico              shift, and go to state 20
    pprivado              shift, and go to state 21
    pprotegido            shift, and go to state 22
    pretornar             shift, and go to state 23
    pvoid                 shift, and go to state 24
    pmostrarnotificacion  shift, and go to state 25
    pimprimir             shift, and go to state 26
    psi                   shift, and go to state 27
    ppara                 shift, and go to state 28
    pprincipal            shift, and go to state 29
    prepetir              shift, and go to state 30
    promper               shift, and go to state 31
    pmientras             shift, and go to state 32
    pcomprobar            shift, and go to state 33
    id                    shift, and go to state 34

    $default  reduce using rule 7 (RELLENOCLASE)

    RELLENOCLASE    go to state 35
    LSENTENCIAS     go to state 36
    SENTENCIA       go to state 37
    DECLARACION     go to state 38
    ASIGNACION      go to state 39
    PRINCIPAL       go to state 40
    RETORNAR        go to state 41
    IMPRIMIR        go to state 42
    MOSTRARNOTIFI   go to state 43
    SI              go to state 44
    PARA            go to state 45
    REPETIR         go to state 46
    ROMPER          go to state 47
    MIENTRAS        go to state 48
    COMPROBAR       go to state 49
    TIPO            go to state 50
    SOBREESCRITURA  go to state 51
    LLAMADAFUNC     go to state 52
    VISIBILIDAD     go to state 53


State 10

    4 CLASE: pclase id TERMINACIONCLASE .

    $default  reduce using rule 4 (CLASE)


State 11

   10 LIDS: id .

    $default  reduce using rule 10 (LIDS)


State 12

    5 TERMINACIONCLASE: pextender LIDS . abrir_llave RELLENOCLASE cerrar_llave
    9 LIDS: LIDS . coma id

    coma         shift, and go to state 54
    abrir_llave  shift, and go to state 55


State 13

   56 TIPO: pint .

    $default  reduce using rule 56 (TIPO)


State 14

   57 TIPO: pdouble .

    $default  reduce using rule 57 (TIPO)


State 15

   58 TIPO: pbool .

    $default  reduce using rule 58 (TIPO)


State 16

   59 TIPO: pchar .

    $default  reduce using rule 59 (TIPO)


State 17

   60 TIPO: pstring .

    $default  reduce using rule 60 (TIPO)


State 18

   31 DECLARACION: parreglo . TIPO LIDS DIMENSION TERMARRAY

    pint     shift, and go to state 13
    pdouble  shift, and go to state 14
    pbool    shift, and go to state 15
    pchar    shift, and go to state 16
    pstring  shift, and go to state 17
    pvoid    shift, and go to state 24
    id       shift, and go to state 56

    TIPO  go to state 57


State 19

   76 SOBREESCRITURA: psobrescribir .

    $default  reduce using rule 76 (SOBREESCRITURA)


State 20

  124 VISIBILIDAD: ppublico .

    $default  reduce using rule 124 (VISIBILIDAD)


State 21

  125 VISIBILIDAD: pprivado .

    $default  reduce using rule 125 (VISIBILIDAD)


State 22

  126 VISIBILIDAD: pprotegido .

    $default  reduce using rule 126 (VISIBILIDAD)


State 23

   38 RETORNAR: pretornar . EXPL finalizacion

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 67
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 24

   62 TIPO: pvoid .

    $default  reduce using rule 62 (TIPO)


State 25

   40 MOSTRARNOTIFI: pmostrarnotificacion . abrir_parentesis EXPL coma EXPL cerrar_parentesis finalizacion

    abrir_parentesis  shift, and go to state 71


State 26

   39 IMPRIMIR: pimprimir . abrir_parentesis EXPL cerrar_parentesis finalizacion

    abrir_parentesis  shift, and go to state 72


State 27

   41 SI: psi . abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave TERMINSI

    abrir_parentesis  shift, and go to state 73


State 28

   42 PARA: ppara . abrir_parentesis PRIMERFOR EXPL finalizacion EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    abrir_parentesis  shift, and go to state 74


State 29

   35 PRINCIPAL: pprincipal . abrir_parentesis cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    abrir_parentesis  shift, and go to state 75


State 30

   43 REPETIR: prepetir . abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    abrir_parentesis  shift, and go to state 76


State 31

   44 ROMPER: promper . finalizacion

    finalizacion  shift, and go to state 77


State 32

   45 MIENTRAS: pmientras . abrir_parentesis EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    abrir_parentesis  shift, and go to state 78


State 33

   46 COMPROBAR: pcomprobar . abrir_parentesis id cerrar_parentesis abrir_llave CASOS cerrar_llave

    abrir_parentesis  shift, and go to state 79


State 34

   32 ASIGNACION: id . igual EXPL finalizacion
   33           | id . DIMENSION igual EXPL finalizacion
   34           | id . punto id igual EXPL finalizacion
   61 TIPO: id .
  120 LLAMADAFUNC: id . punto id abrir_parentesis VARF cerrar_parentesis
  121            | id . abrir_parentesis VARF cerrar_parentesis

    abrir_corchete    shift, and go to state 80
    punto             shift, and go to state 81
    igual             shift, and go to state 82
    abrir_parentesis  shift, and go to state 83

    $default  reduce using rule 61 (TIPO)

    DIMENSION  go to state 84


State 35

    6 TERMINACIONCLASE: abrir_llave RELLENOCLASE . cerrar_llave

    cerrar_llave  shift, and go to state 85


State 36

    8 RELLENOCLASE: LSENTENCIAS .
   11 LSENTENCIAS: LSENTENCIAS . SENTENCIA

    pint                  shift, and go to state 13
    pdouble               shift, and go to state 14
    pbool                 shift, and go to state 15
    pchar                 shift, and go to state 16
    pstring               shift, and go to state 17
    parreglo              shift, and go to state 18
    psobrescribir         shift, and go to state 19
    ppublico              shift, and go to state 20
    pprivado              shift, and go to state 21
    pprotegido            shift, and go to state 22
    pretornar             shift, and go to state 23
    pvoid                 shift, and go to state 24
    pmostrarnotificacion  shift, and go to state 25
    pimprimir             shift, and go to state 26
    psi                   shift, and go to state 27
    ppara                 shift, and go to state 28
    pprincipal            shift, and go to state 29
    prepetir              shift, and go to state 30
    promper               shift, and go to state 31
    pmientras             shift, and go to state 32
    pcomprobar            shift, and go to state 33
    id                    shift, and go to state 34

    $default  reduce using rule 8 (RELLENOCLASE)

    SENTENCIA       go to state 86
    DECLARACION     go to state 38
    ASIGNACION      go to state 39
    PRINCIPAL       go to state 40
    RETORNAR        go to state 41
    IMPRIMIR        go to state 42
    MOSTRARNOTIFI   go to state 43
    SI              go to state 44
    PARA            go to state 45
    REPETIR         go to state 46
    ROMPER          go to state 47
    MIENTRAS        go to state 48
    COMPROBAR       go to state 49
    TIPO            go to state 50
    SOBREESCRITURA  go to state 51
    LLAMADAFUNC     go to state 52
    VISIBILIDAD     go to state 53


State 37

   12 LSENTENCIAS: SENTENCIA .

    $default  reduce using rule 12 (LSENTENCIAS)


State 38

   13 SENTENCIA: DECLARACION .

    $default  reduce using rule 13 (SENTENCIA)


State 39

   14 SENTENCIA: ASIGNACION .

    $default  reduce using rule 14 (SENTENCIA)


State 40

   16 SENTENCIA: PRINCIPAL .

    $default  reduce using rule 16 (SENTENCIA)


State 41

   17 SENTENCIA: RETORNAR .

    $default  reduce using rule 17 (SENTENCIA)


State 42

   18 SENTENCIA: IMPRIMIR .

    $default  reduce using rule 18 (SENTENCIA)


State 43

   19 SENTENCIA: MOSTRARNOTIFI .

    $default  reduce using rule 19 (SENTENCIA)


State 44

   20 SENTENCIA: SI .

    $default  reduce using rule 20 (SENTENCIA)


State 45

   21 SENTENCIA: PARA .

    $default  reduce using rule 21 (SENTENCIA)


State 46

   22 SENTENCIA: REPETIR .

    $default  reduce using rule 22 (SENTENCIA)


State 47

   23 SENTENCIA: ROMPER .

    $default  reduce using rule 23 (SENTENCIA)


State 48

   24 SENTENCIA: MIENTRAS .

    $default  reduce using rule 24 (SENTENCIA)


State 49

   25 SENTENCIA: COMPROBAR .

    $default  reduce using rule 25 (SENTENCIA)


State 50

   28 DECLARACION: TIPO . LIDS TERMDECLAR

    id  shift, and go to state 11

    LIDS  go to state 87


State 51

   27 DECLARACION: SOBREESCRITURA . VISIBILIDAD TIPO LIDS TERMDECLAR
   29            | SOBREESCRITURA . TIPO LIDS TERMDECLAR

    pint        shift, and go to state 13
    pdouble     shift, and go to state 14
    pbool       shift, and go to state 15
    pchar       shift, and go to state 16
    pstring     shift, and go to state 17
    ppublico    shift, and go to state 20
    pprivado    shift, and go to state 21
    pprotegido  shift, and go to state 22
    pvoid       shift, and go to state 24
    id          shift, and go to state 56

    TIPO         go to state 88
    VISIBILIDAD  go to state 89


State 52

   15 SENTENCIA: LLAMADAFUNC . finalizacion

    finalizacion  shift, and go to state 90


State 53

   26 DECLARACION: VISIBILIDAD . TIPO LIDS TERMDECLAR
   30            | VISIBILIDAD . parreglo TIPO LIDS DIMENSION TERMARRAY

    pint      shift, and go to state 13
    pdouble   shift, and go to state 14
    pbool     shift, and go to state 15
    pchar     shift, and go to state 16
    pstring   shift, and go to state 17
    parreglo  shift, and go to state 91
    pvoid     shift, and go to state 24
    id        shift, and go to state 56

    TIPO  go to state 92


State 54

    9 LIDS: LIDS coma . id

    id  shift, and go to state 93


State 55

    5 TERMINACIONCLASE: pextender LIDS abrir_llave . RELLENOCLASE cerrar_llave

    pint                  shift, and go to state 13
    pdouble               shift, and go to state 14
    pbool                 shift, and go to state 15
    pchar                 shift, and go to state 16
    pstring               shift, and go to state 17
    parreglo              shift, and go to state 18
    psobrescribir         shift, and go to state 19
    ppublico              shift, and go to state 20
    pprivado              shift, and go to state 21
    pprotegido            shift, and go to state 22
    pretornar             shift, and go to state 23
    pvoid                 shift, and go to state 24
    pmostrarnotificacion  shift, and go to state 25
    pimprimir             shift, and go to state 26
    psi                   shift, and go to state 27
    ppara                 shift, and go to state 28
    pprincipal            shift, and go to state 29
    prepetir              shift, and go to state 30
    promper               shift, and go to state 31
    pmientras             shift, and go to state 32
    pcomprobar            shift, and go to state 33
    id                    shift, and go to state 34

    $default  reduce using rule 7 (RELLENOCLASE)

    RELLENOCLASE    go to state 94
    LSENTENCIAS     go to state 36
    SENTENCIA       go to state 37
    DECLARACION     go to state 38
    ASIGNACION      go to state 39
    PRINCIPAL       go to state 40
    RETORNAR        go to state 41
    IMPRIMIR        go to state 42
    MOSTRARNOTIFI   go to state 43
    SI              go to state 44
    PARA            go to state 45
    REPETIR         go to state 46
    ROMPER          go to state 47
    MIENTRAS        go to state 48
    COMPROBAR       go to state 49
    TIPO            go to state 50
    SOBREESCRITURA  go to state 51
    LLAMADAFUNC     go to state 52
    VISIBILIDAD     go to state 53


State 56

   61 TIPO: id .

    $default  reduce using rule 61 (TIPO)


State 57

   31 DECLARACION: parreglo TIPO . LIDS DIMENSION TERMARRAY

    id  shift, and go to state 11

    LIDS  go to state 95


State 58

  103 EXPA: numero .
  112     | numero . aumento
  113     | numero . decremento

    aumento     shift, and go to state 96
    decremento  shift, and go to state 97

    $default  reduce using rule 103 (EXPA)


State 59

  104 EXPA: decimal .
  114     | decimal . aumento
  115     | decimal . decremento

    aumento     shift, and go to state 98
    decremento  shift, and go to state 99

    $default  reduce using rule 104 (EXPA)


State 60

  105 EXPA: caracter .
  116     | caracter . aumento
  117     | caracter . decremento

    aumento     shift, and go to state 100
    decremento  shift, and go to state 101

    $default  reduce using rule 105 (EXPA)


State 61

  106 EXPA: booleano .

    $default  reduce using rule 106 (EXPA)


State 62

  107 EXPA: cadena .

    $default  reduce using rule 107 (EXPA)


State 63

  108 EXPA: id .
  109     | id . DIMENSION
  110     | id . aumento
  111     | id . decremento
  118     | id . punto id
  120 LLAMADAFUNC: id . punto id abrir_parentesis VARF cerrar_parentesis
  121            | id . abrir_parentesis VARF cerrar_parentesis

    abrir_corchete    shift, and go to state 80
    punto             shift, and go to state 102
    aumento           shift, and go to state 103
    decremento        shift, and go to state 104
    abrir_parentesis  shift, and go to state 83

    $default  reduce using rule 108 (EXPA)

    DIMENSION  go to state 105


State 64

  102 EXPA: abrir_parentesis . EXPA cerrar_parentesis

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    resta             shift, and go to state 66

    EXPA         go to state 106
    LLAMADAFUNC  go to state 70


State 65

   87 EXPL: opnot . EXPL

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 107
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 66

  101 EXPA: resta . EXPA

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    resta             shift, and go to state 66

    EXPA         go to state 108
    LLAMADAFUNC  go to state 70


State 67

   38 RETORNAR: pretornar EXPL . finalizacion

    finalizacion  shift, and go to state 109


State 68

   83 EXPL: EXPR . opor EXPR
   84     | EXPR . opnor EXPR
   85     | EXPR . opand EXPR
   86     | EXPR . opnand EXPR
   88     | EXPR .

    opor    shift, and go to state 110
    opand   shift, and go to state 111
    opnand  shift, and go to state 112
    opnor   shift, and go to state 113

    $default  reduce using rule 88 (EXPL)


State 69

   89 EXPR: EXPA . igual_igual EXPA
   90     | EXPA . diferente_de EXPA
   91     | EXPA . menor_que EXPA
   92     | EXPA . mayor_que EXPA
   93     | EXPA . menorigual_que EXPA
   94     | EXPA . mayorigual_que EXPA
   95     | EXPA .
   96 EXPA: EXPA . suma EXPA
   97     | EXPA . resta EXPA
   98     | EXPA . multi EXPA
   99     | EXPA . division EXPA
  100     | EXPA . potencia EXPA

    igual_igual     shift, and go to state 114
    diferente_de    shift, and go to state 115
    menor_que       shift, and go to state 116
    menorigual_que  shift, and go to state 117
    mayor_que       shift, and go to state 118
    mayorigual_que  shift, and go to state 119
    suma            shift, and go to state 120
    resta           shift, and go to state 121
    multi           shift, and go to state 122
    division        shift, and go to state 123
    potencia        shift, and go to state 124

    $default  reduce using rule 95 (EXPR)


State 70

  119 EXPA: LLAMADAFUNC .

    $default  reduce using rule 119 (EXPA)


State 71

   40 MOSTRARNOTIFI: pmostrarnotificacion abrir_parentesis . EXPL coma EXPL cerrar_parentesis finalizacion

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 125
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 72

   39 IMPRIMIR: pimprimir abrir_parentesis . EXPL cerrar_parentesis finalizacion

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 126
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 73

   41 SI: psi abrir_parentesis . EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave TERMINSI

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 127
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 74

   42 PARA: ppara abrir_parentesis . PRIMERFOR EXPL finalizacion EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    pint           shift, and go to state 13
    pdouble        shift, and go to state 14
    pbool          shift, and go to state 15
    pchar          shift, and go to state 16
    pstring        shift, and go to state 17
    parreglo       shift, and go to state 18
    psobrescribir  shift, and go to state 19
    ppublico       shift, and go to state 20
    pprivado       shift, and go to state 21
    pprotegido     shift, and go to state 22
    pvoid          shift, and go to state 24
    id             shift, and go to state 128

    DECLARACION     go to state 129
    ASIGNACION      go to state 130
    PRIMERFOR       go to state 131
    TIPO            go to state 50
    SOBREESCRITURA  go to state 51
    VISIBILIDAD     go to state 53


State 75

   35 PRINCIPAL: pprincipal abrir_parentesis . cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    cerrar_parentesis  shift, and go to state 132


State 76

   43 REPETIR: prepetir abrir_parentesis . EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave

    numero            shift, and go to state 58
    decimal           shift, and go to state 59
    caracter          shift, and go to state 60
    booleano          shift, and go to state 61
    cadena            shift, and go to state 62
    id                shift, and go to state 63
    abrir_parentesis  shift, and go to state 64
    opnot             shift, and go to state 65
    resta             shift, and go to state 66

    EXPL         go to state 133
    EXPR         go to state 68
    EXPA         go to state 69
    LLAMADAFUNC  go to state 70


State 77

   44 ROMPER: promper finalizacion .

    $default  reduce using rule 44 (ROMPER)


State 78

   45 MIENTRAS: pmientras abrir_parentesis . EXPL cerrar_parentesis abrir_llave RELLENOCLASE cerrar_llave
